Details
-
Bug
-
Resolution: Fixed
-
Minor
-
0.4.8-dev-694-gedd99e8 https://github.com/reactos/reactos/commit/edd99e8ccc10db74b2ec8eb84bd7353386eb5e03
Description
Reporting against 0.4.8-dev-776 gcc dbg.
The theme-previewing in second stage setup regressed.
see 0.4.8-dev-776_broken.png
A regression, because
0.4.8-dev-286_ok.png
Attachments
Issue Links
- blocks
-
CORE-14225 Syncing ReactOS with Wine 3.0
-
- Resolved
-